Version 1.1.3
[list]
[*]Added the ability for tall grass, reeds, and saplings to grow on grassy clay.
[*]Changed how the end generates in all BTA world types to create slightly more interesitng terrain.
[*]Changed (increased) the height to which iron will generate in skylands given that at any given time the player is likely to be much higher in elevation that in vanilla.
[*]Changed sugar cane in skylands to no longer be restricted by biome given how rarely it still generates.
[*]Fixed an issue where fungal forest and fungal forest lowlands did not have the same grass color.
[/list]

Version 1.1.2
[list]
[*]Added the ability for temples and witch huts to spawn in skylands, although they may sometimes be floating over the void still.
[*]Changed sandy beaches in beta terrain to spawn with red sand in outback and badlands.
[*]Refactored several aspects of how world types are handled internally to make adding new types easier.
[*]Fixed an issue where the recent change to terracotta depth caused badlands to generate terracotta all the way to bedrock.
[/list]

Version 1.1.1
[list]
[*]Added skylands generation to the nether in skylands worlds. Ghast spawn rate has been significantly reduced in this world type given that tunneling is far less viable.
[*]Changed (increased) the number of surface water lakes in skylands given that there are no oceans. This improves the ability to farm and build mechanical builds which require water, and increases the frequency of sugar cane in biomes in which it can appear.
[*]Changed (increased) the number of surface lava lakes in skylands given that cave lava does not generate, making obsidian easier to aqcuire.
[*]Changed (increased) the number of times the game will attempt to generate dungeons in skylands to offset the number of dungeon spawns that fail from being in the void.
[*]Fixed an issue where skylands would always generate grass near y=64 even if the biome should not generate grass.