@@ -1,1 +1,2 @@
-selectWorld.isDeco=Deco Enabled: 
+selectWorld.isDeco=Deco Enabled:
+selectWorld.isSmall=Smaller Biomes:
