@@ -9,7 +9,10 @@ public class BTAMod extends AddonExt {
 	public static final WorldType BTAWorldTypeBetaDeco = new BTAWorldTypeBeta(7, "BTABetaDeco").setIsDeco().setCanBeCreated(false);
 	public static final WorldType BTAWorldTypeSky = new BTAWorldTypeSky(8, "BTASky");
 	public static final WorldType BTAWorldTypeSkyDeco = new BTAWorldTypeSky(9, "BTASkyDeco").setIsDeco().setCanBeCreated(false);
-	public static final WorldType BTAWorldTypeHorizons = new BTAWorldTypeHorizons(10, "BTAHorizons");
+	public static final WorldType BTAWorldTypeSmall = new BTAWorldType(10, "BTASmall").setCanBeCreated(false);
+	public static final WorldType BTAWorldTypeSmallDeco = new BTAWorldType(11, "BTASmallDeco").setIsDeco().setCanBeCreated(false);
+
+	public static final WorldType BTAWorldTypeHorizons = new BTAWorldTypeHorizons(15, "BTAHorizons").setCanBeCreated(false);
 	
 	private BTAMod() {
 		super("Better Terrain", "1.1.3", "BTA");
